# sports-py-package

./: .pypirc  README.md  pyproject.toml
src/sports_event_utils/: __init__.py  auth_utils.py  event_utils.py
