[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sports-event-utils"
version = "0.1.0"
authors = [
  { name="Your Name", email="your.email@example.com" },
]
description = "Utility functions for sports event management"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyjwt>=2.0.0",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/sports-event-utils"
"Bug Tracker" = "https://github.com/yourusername/sports-event-utils/issues"